--- a/style.css
+++ b/style.css
@@ -1,34 +1,45 @@
 body{
 
   background-color: hsl(0, 0%, 81%);
+  font-size: 13px;
 }
 
 @media (min-width:700px) {
   .container{
 
-  grid-template-columns: 1fr 1fr 1fr 1fr;
-  grid-template-rows: 1fr 1fr;
-        display: grid;
-          gap: 10px;
+    grid-template-areas: " 1 1 2 / 3 4/ 5 5" ;
+    display: grid;
+    gap: 10px;
 }
 .container{
   margin: 10%;
 }
 }
 .card{
-  margin:10px;
+  margin: 1.5rem;
   background-color: var(--background,hsl(0, 0%, 100%));
   color: var(--color,aliceblue );
-  border-radius: 1rem;
-  padding: 2rem;
+  border-radius: 0.5rem;
+  padding: 0.5rem 2rem ;
 }
 .card img{
-  border-radius: 50%
+  border-radius: 50%;
+  max-width:40px;
 }
 .card .card_info {
   display: flex;
   align-items: center;
 }
+.card .card_info div {
+  margin: 20px;
+}
+.card .card_info p{
+   opacity: 50%;
+}
 .card .card_info div * {
   margin: 0;  
+}
+
+.card p{
+  opacity: 70%;
 }
