--- a/style.css
+++ b/style.css
@@ -1,26 +1,29 @@
+@import url('https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:wght@100;500;600&display=swap');
 body{
 
   background-color: hsl(0, 0%, 81%);
+  font-family: "Barlow Semi Condensed", sans-serif;
   font-size: 13px;
 }
 
 @media (min-width:700px) {
   .container{
 
-    grid-template-areas: " 1 1 2 / 3 4/ 5 5" ;
+    grid-template-areas:
+    "one one two fife"
+    "three four four fife";
     display: grid;
-    gap: 10px;
-}
-.container{
-  margin: 10%;
-}
-}
+    margin: 15%;
+    padding: 0 20px;
+  }}
+
 .card{
-  margin: 1.5rem;
+  font-weight: 600;
+  margin: 1rem;
+  padding: 1rem 2rem ;
   background-color: var(--background,hsl(0, 0%, 100%));
   color: var(--color,aliceblue );
   border-radius: 0.5rem;
-  padding: 0.5rem 2rem ;
 }
 .card img{
   border-radius: 50%;
@@ -31,7 +34,7 @@ body{
   align-items: center;
 }
 .card .card_info div {
-  margin: 20px;
+  margin: 0 20px ;
 }
 .card .card_info p{
    opacity: 50%;
@@ -41,5 +44,6 @@ body{
 }
 
 .card p{
+  font-weight: 500;
   opacity: 70%;
 }
